--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "community-games",
+  "name": "freela-certo",
+  "author": {
+    "name": "Douglas Porto",
+    "url": "https://douglasporto.com.br"
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +16,7 @@
     "test:watch": "yarn test --watch",
     "postinstall": "husky install",
     "storybook": "start-storybook -s ./public -p 6006",
+    "commit": "git-cz",
     "build-storybook": "build-storybook -s ./public"
   },
   "husky": {
@@ -26,7 +31,10 @@
     ]
   },
   "dependencies": {
-    "next": "10.0.6",
+    "@material-ui/core": "^4.12.3",
+    "@svgr/webpack": "^5.5.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "next": "^11.0.1",
     "next-pwa": "^5.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -35,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@next/eslint-plugin-next": "^11.0.1",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-knobs": "^6.1.21",
@@ -50,11 +59,16 @@
     "@typescript-eslint/parser": "^4.11.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.22.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-import-helpers": "^1.1.0",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
