--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,26 @@
 {
+  "presets": ["next/babel", "@babel/preset-typescript"],
   "plugins": [
+    "inline-react-svg",
     [
       "babel-plugin-styled-components",
       {
-        "ssr": false
+        "ssr": true,
+        "displayName": true
       }
     ]
   ],
-  "presets": ["next/babel", "@babel/preset-typescript"]
+  "env": {
+    "test": {
+      "plugins": [
+        [
+          "babel-plugin-styled-components",
+          {
+            "ssr": false,
+            "displayName": false
+          }
+        ]
+      ]
+    }
+  }
 }
